# InstallerProDev

./: .gitignore  InstallerPro.iss  InstallerPro.spec  InstallerProDir.spec  README.md  _projects.yml  estructura.txt  instalador_gui_automailpro.py  installerpro_qt.spec  installerpro_tk.py  pyproject.toml  requirements.txt  test_i18n.py
.github/workflows/: ci.yml
Docs/: Guia_Sincronizacion_Proyectos.docx  Quick Start Guide - InstallerPro.txt  ayuda_en.md  ayuda_es.md
examples/: instalador_gui_automailpro.py  installerpro_qt.py
installerpro/: # installerproi18n.py temporal.txt  __init__.py  __main__.py  _config.json  config.json  config.py  dark.qss  docs.py  i18n.py  i18n_init_.py  installerpro_qt.py  light.qss  projects.json  ui_dialogs.py  your_main_app.py
installerpro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
installerpro/core/: __init__.py  config.py  config_manager.py  git_operations.py  logger.py  logging_config.py  main.py  project_manager.py  security_analyzer.py
installerpro/i18n/: en.json  es.json  i18n.py
installerpro/ui/: settings.json  settings_dialog.py
installerpro/utils/: git_operations.py
installerpro/utils/locales/: en.json  es.json
logs/: commit_history.txt
tests/: __init__.py  test_git_export.py  test_git_push.py  test_gui.py  test_i18n.py  test_smoke.py
