[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where    = ["."]
include  = ["installerpro*"]
exclude  = ["Docs"]

[project]
name             = "installerpro"
version          = "4.0.1"
description      = "Automatic multi-project Git environment installer"
readme           = "README.md"
requires-python  = ">=3.9"
authors          = [
  { name = "Humberto Medina", email = "tu-correo@example.com" }
]
dependencies     = [
  "requests>=2",
  "PySide6",
  "qasync",
  "GitPython",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "black",
  "ruff",
]

[project.scripts]
installerpro = "installerpro.__main__:main"

[tool.ruff]
exclude = ["examples"]
